# insert_to_copy

./: .gitignore  CMakeLists.txt  README.md  arquivo_input.sql  arquivo_output.sql
cjson/: cJSON.c  cJSON.h  cJSON_Utils.c  test.c
examples/: insert_to_copy.c  insert_to_copy2.c
src/: pg_query.def
